# OOP_Labs

./: CMakeLists.txt
LW_1/: main.cpp
LW_1/include/: solver.h
LW_1/src/: solver.cpp
LW_1/test/: test_solver.cpp
LW_2/: CMakeLists.txt  main.cpp
LW_2/include/: solver.h
LW_2/src/: array.cpp  seven.cpp  solver.cpp
LW_2/test/: test_solver.cpp
LW_3/: CMakeLists.txt  main.cpp
LW_3/include/: solver.h
LW_3/src/: Rectangle.cpp  Square.cpp  Trapezoid.cpp  lab3.cpp
LW_3/test/: test_solver.cpp
LW_4/: CMakeLists.txt
LW_4/include/: array.h  figure.h  point.h  rectangle.h  trapeze.h
LW_4/src/: array.cpp  exceptions.cpp  figure.cpp  point.cpp  rectangle.cpp  square.cpp  trapeze.cpp
LW_4/test/: test_solver.cpp
LW_5/: CMakeLists.txt
LW_5/include/: stack_memory_resource.h
LW_6/: CMakeLists.txt
LW_7/: CMakeLists.txt
